added question and loaded data

--- a/presentation.html
+++ b/presentation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Presentation title</title>
+    <title>Project Proposal</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Team name   Names of team members" />
-    <meta name="date" content="2022-10-19" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <meta name="author" content="Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brownscott" />
+    <meta name="date" content="2022-10-21" />
+    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -13,19 +13,19 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Presentation title
+# Project Proposal
 ]
 .subtitle[
-## Presentation subtitle (if any)
+## How a Range of Factors Affect Worldwide Happiness
 ]
 .author[
-### Team name <br> Names of team members
+### Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brownscott
 ]
 .institute[
 ### University of Edinburgh
 ]
 .date[
-### 2022-10-19
+### 2022-10-21
 ]
 
 ---
