Callum ; first and second slides

--- a/presentation.html
+++ b/presentation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Project Proposal</title>
+    <title>IDS Final Presentation</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brownscott" />
-    <meta name="date" content="2022-10-21" />
+    <meta name="author" content="Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brown-Scott" />
+    <meta name="date" content="2022-11-04" />
     <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -13,19 +13,19 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Project Proposal
+# IDS Final Presentation
 ]
 .subtitle[
-## How a Range of Factors Affect Worldwide Happiness
+## 2022
 ]
 .author[
-### Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brownscott
+### Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brown-Scott
 ]
 .institute[
 ### University of Edinburgh
 ]
 .date[
-### 2022-10-21
+### 2022-11-04
 ]
 
 ---
@@ -41,7 +41,7 @@ class: center, middle, inverse, title-slide
 
 class: center, middle
 
-## A statement of the overall goal / research question
+## How  Do a Range of Factors Affect Worldwide Happiness?
 
 ---
 
