--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <title>IDS Final Presentation</title>
     <meta charset="utf-8" />
     <meta name="author" content="Ben Mitchell, Eddie Jiang, Callum Knox, Sarah Brown-Scott" />
-    <meta name="date" content="2022-11-04" />
+    <meta name="date" content="2022-11-10" />
     <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -25,7 +25,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-11-04
+### 2022-11-10
 ]
 
 ---
@@ -55,6 +55,14 @@ The dataset was found on the website Kaggle (https://www.kaggle.com/datasets/uns
 The dataset uses the variables of Country, Region, Happiness rank, Happiness score, Standard error, Economy(GDP), Family, Health (Life Expectancy), Freedom, Trust (Government Corruption), Generosity and Dystopia Residual.
 
 The dataset we are using was collected in 2015.
+
+The dataset is used to help governments, organizations and civil society to inform their policy-making decisions.
+The happiness rank and score data was collected by the Gallup World Poll.
+
+The Gallup World Poll is said to be “the most comprehensive and farthest-reaching survey of the world”.
+
+On the Gallop website it is stated that the survey connects with more than 99% of the world's adult population through annual, nationally representative surveys with comparable metrics across countries.
+
 
 ---
 
