sarah : loaded countries

--- a/presentation.html
+++ b/presentation.html
@@ -93,7 +93,7 @@ class: inverse, middle, center
 ```r
 happiness %&gt;%
 ggplot(data = happiness, 
-       mapping = aes(x = "Happiness Score", y = "Family"))+
+       mapping = aes(x = "Family", y = "Happiness Score"))+
   geom_point()
 ```
 
