added more graphs

--- a/presentation.html
+++ b/presentation.html
@@ -92,22 +92,40 @@ class: inverse, middle, center
 
 # Plots
 
-
-```r
-#happiness %&gt;%
- # left_join(happiness, countries, by "Country")
-```
+&lt;img src="presentation_files/figure-html/unnamed-chunk-3-1.png" width="80%" /&gt;
 
 
+---
 
-```r
-happiness %&gt;%
-ggplot(data = happiness, 
-       mapping = aes(x = Family, y = happiness_score))+
-  geom_jitter()
-```
+class: inverse, middle, center
+
+# Plots
 
 &lt;img src="presentation_files/figure-html/unnamed-chunk-4-1.png" width="80%" /&gt;
+
+
+---
+class: inverse, middle, center
+
+# Plots
+
+&lt;img src="presentation_files/figure-html/unnamed-chunk-5-1.png" width="80%" /&gt;
+
+
+---
+class: inverse, middle, center
+
+# Plots
+
+&lt;img src="presentation_files/figure-html/unnamed-chunk-6-1.png" width="80%" /&gt;
+
+
+---
+class: inverse, middle, center
+
+# Plots
+
+&lt;img src="presentation_files/figure-html/unnamed-chunk-7-1.png" width="80%" /&gt;
 
 
 ---
@@ -174,7 +192,7 @@ print(ave)
 - goes here
 ]
 .pull-right[
-&lt;img src="presentation_files/figure-html/unnamed-chunk-5-1.png" width="100%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-8-1.png" width="100%" /&gt;
 ]
 
 ---
